# launchpad

./: .editorconfig  .env.example  .gitignore  .rocket.txt  Cargo.toml  LICENSE  LICENSE-MIT  Makefile.toml  README.md  Rocket.toml  TODO.md  diesel.toml  docker-compose.override.yaml  docker-compose.yaml  env.example  init.sql  justfile
.github/workflows/: api-container.yaml  api-database.yaml  api-tests.yaml  infrastructure-reverse-proxy.yaml  postgres-api.yaml  services-api.yaml  services-web.yaml  web-tests.yaml
api/: Cargo.toml  env.local  justfile
css/: .gitignore  README.md
docs/: PORTS.md  TODO.md
docs/startup-guide/: book.toml
docs/startup-guide/src/: incorporation.md  information_technology.md
guide/: justfile
guide/src/: SUMMARY.md  overview.md  strategy.md
infrastructure/deployment/: deploy-machine.sh  init-machine.sh  justfile
infrastructure/docker/: README.md  docker-compose.base.yaml  docker-compose.local.yaml  docker-compose.production.yaml
infrastructure/reverse-proxy/: Dockerfile  README.md
infrastructure/reverse-proxy/nginx/: development.conf  production.conf
infrastructure/reverse-proxy/scripts/: registery-domain.sh  renew-certs.sh
migrations/00000000000010_users/: up.sql
migrations/00000000000011_passwords/: up.sql
migrations/00000000000012_user_settings/: up.sql
migrations/00000000000020_access_types/: down.sql  up.sql
migrations/00000000000021_access/: down.sql  up.sql
migrations/00000000000021_user_access_tokens/: down.sql  up.sql
production/: deploy-machine.sh  docker-compose.prod.yaml  init-letsencrypt.sh  justfile
public/css/: tailwind.css
server/: Cargo.toml  Makefile.toml  README.md
server/migrations/00000000000010_users/: up.sql
server/migrations/00000000000020_access_types/: up.sql
server/src/: main.rs
server/src/db/: mod.rs  password.rs  schema.rs  user.rs  user_settings.rs
server/src/db/models/: user.rs
server/src/models/: login.rs  mod.rs  password.rs  registration.rs  session.rs  user.rs  view_context.rs
server/src/routes/: basic.rs  error.rs  mod.rs
server/src/routes/api/: auth.rs
server/src/routes/auth/: mod.rs
server/src/server/: config.rs  mod.rs
server/src/tests/: auth.rs
server/src/tests/api/: auth.rs
server/templates/: README.md  base.html.tera
server/templates/components/: debug.html.tera  footer.html.tera  form.html.tera  header.html.tera  header_nav.html.tera
server/templates/pages/: index.html.tera  login.html.tera  register.html.tera
services/api/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  env.local  justfile  recipe.json
services/api/migrations/2021-03-29-001744_app_settings/: up.sql
services/api/src/: lib.rs  main.rs
services/api/src/clients/: kratos_client.rs  mod.rs
services/api/src/configs/: kratos_client.rs  mod.rs  postgres_provider.rs
services/api/src/db/: initialize.rs  mod.rs  schema.rs
services/api/src/handlers/: authenticated.rs  guest.rs  mod.rs
services/api/src/mocks/: kratos.rs
services/api/src/models/: app_settings.rs  mod.rs  user.rs
services/api/src/models/kratos/: mod.rs  session.rs
services/api/src/tests/: handlers.rs  mod.rs
services/api/tests/fixtures/kratos/: session.json  session_expired.json  session_inactive.json
services/api/tests/integration/handlers/: authenticated.rs  guest.rs  mod.rs
services/auth/kratos/: env.local  identity.schema.json  kratos.yml  local.yml  production.yml
services/auth/kratos/local/: env.local  kratos.yml
services/auth/kratos/production/: kratos.yml
services/auth/oathkeeper/: access-rules.yml  production.yml
services/auth/oathkeeper/local/: access-rules.yml  oathkeeper.yml
services/auth/oathkeeper/production/: access-rules.yml  oathkeeper.yml
services/data/postgres/: init-db.sql
services/deployment/docker/: docker-compose.base.yaml  docker-compose.yaml
services/reverse-proxy/: README.md
services/reverse-proxy/local/: Caddyfile  install-local-certs.sh
services/reverse-proxy/local/certs/: cert.pem  fullchain.pem  privkey.pem
services/reverse-proxy/nginx/: development.conf  production.conf
services/reverse-proxy/production/: Caddyfile
services/web/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  env.local  justfile
services/web/nginx/: nginx.conf
services/web/src/: App.tsx
services/web/src/pages/: index.tsx
src/: main.rs
src/db/: schema.rs
src/db/models/: access.rs  mod.rs  user.rs
src/models/: app.rs  cache.rs  login.rs  mod.rs  password.rs  registration.rs  session.rs  user.rs
src/routes/: basic.rs  mod.rs
src/routes/api/: auth.rs
src/routes/auth/: mod.rs
src/server/: mod.rs
src/tests/: auth.rs  mod.rs
tailwind/: package.json  tailwind.config.js  tailwind.css
templates/: base.html.tera  index.html.tera  login.html.tera  register.html.tera
templates/components/: footer.html.tera  header.html.tera
templates/pages/: register.html.tera
web/: .env.local  .eslintrc.json  .gitignore  .prettier.config.js  README.md  env.local  justfile  package.json
web/auth/: README.md  README.old.md  package.json
web/auth/src/: App.tsx
web/auth/src/pages/: Login.tsx
web/src/: App.test.tsx  App.tsx
web/src/auth/components/: Form.tsx  FormWrapper.tsx  index.tsx
web/src/auth/pages/: Callback.tsx  Login.tsx  (+3 more)
web/src/components/: AuthForm.tsx
web/src/hooks/: use-auth.ts
web/src/pages/: Home.tsx  index.tsx
(+8 files in other folders)
