[package]
name = "launchpad"
version = "0.1.0"
authors = ["Chris Zehner <cbzehner@gmail.com>"]
edition = "2018"

[dependencies]
scrypt = "0.4.1"
serde_json = "1.0.57"

[dependencies.chrono]
version = "0.4.15"
features = ["serde"]

[dependencies.rocket]
version = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates",  "uuid"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.uuid]
version = "0.8.1"
default-features = false
features = ["v4", "serde"]
