[package]
name = "server"
version = "0.1.0"
authors = ["Chris Zehner <cbzehner@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
dotenv = "0.15"
scrypt = "0.4.1"
serde_json = "1.0.57"
rocket = "0.4.5"

[dependencies.chrono]
version = "0.4.15"
features = ["serde"]

[dependencies.diesel]
version = "1.4"
features = ["chrono", "postgres", "uuid"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["diesel_postgres_pool", "tera_templates",  "uuid"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.uuid]
version = "0.6.4"
default-features = false
features = ["v4", "serde"]
