[package]
name = "api"
version = "0.1.0"
authors = ["Chris Zehner <cbzehner@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
email_address = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rocket_contrib = { git =  "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
features = ["secrets", "tls"]

[dev-dependencies]
bear = "0.2"
wiremock = "0.5"